--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -153,14 +153,27 @@ jobs:
     - name: Update version file
       run: |
         # Create version header for C code
+        DATE_PART=$(echo $RAVN_VERSION | cut -d'.' -f1)
+        MAGIC_PART=$(echo $RAVN_VERSION | cut -d'.' -f2)
+        
+        YEAR=$(echo $DATE_PART | cut -c1-4)
+        MONTH=$(echo $DATE_PART | cut -c5-6)
+        DAY=$(echo $DATE_PART | cut -c7-8)
+        
+        # Remove leading zeros to avoid octal constant issues
+        YEAR_NUM=$((10#$YEAR))
+        MONTH_NUM=$((10#$MONTH))
+        DAY_NUM=$((10#$DAY))
+        MAGIC_NUM=$((10#$MAGIC_PART))
+        
         cat > src/version.h << EOF
         #ifndef RAVN_VERSION_H
         #define RAVN_VERSION_H
         
-        #define RAVN_VERSION_MAJOR $(echo $RAVN_VERSION | cut -d'.' -f1 | cut -c1-4)
-        #define RAVN_VERSION_MINOR $(echo $RAVN_VERSION | cut -d'.' -f1 | cut -c5-6)
-        #define RAVN_VERSION_PATCH $(echo $RAVN_VERSION | cut -d'.' -f1 | cut -c7-8)
-        #define RAVN_VERSION_MAGIC $(echo $RAVN_VERSION | cut -d'.' -f2)
+        #define RAVN_VERSION_MAJOR $YEAR_NUM
+        #define RAVN_VERSION_MINOR $MONTH_NUM
+        #define RAVN_VERSION_PATCH $DAY_NUM
+        #define RAVN_VERSION_MAGIC $MAGIC_NUM
         #define RAVN_VERSION_STRING "$RAVN_VERSION"
         #define RAVN_BUILD_DATE "$RAVN_BUILD_DATE"
         #define RAVN_BUILD_TIME "$RAVN_BUILD_TIME"
