new virtual env
Signed-off-by: Guy Davidi <guydav1111@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,12 @@
-# RAVN Python Dependencies
-# For AI model training and data generation
-
+# RAVN AI Model Training Dependencies
 # Core ML libraries
-tensorflow>=2.10.0
 numpy>=1.21.0
+tensorflow>=2.10.0
 scikit-learn>=1.1.0
-pandas>=1.4.0
 
-# Data visualization
+# Visualization and analysis
 matplotlib>=3.5.0
 seaborn>=0.11.0
 
-# Utilities
-tqdm>=4.64.0
-argparse
-json5>=0.9.0
-
-# Development tools
-pytest>=7.0.0
-black>=22.0.0
-flake8>=5.0.0
-mypy>=0.950
-
-# Optional: Jupyter for interactive development
-jupyter>=1.0.0
-ipykernel>=6.0.0
+# Additional utilities
+pandas>=1.4.0
