--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -41,7 +41,27 @@ jobs:
           libbpf-dev \
           libhiredis-dev \
           python3 \
-          python3-pip
+          python3-pip \
+          python3-venv
+    
+    - name: Set up Python virtual environment
+      run: |
+        echo "Setting up Python virtual environment..."
+        python3 -m venv venv
+        source venv/bin/activate
+        
+        # Upgrade pip in virtual environment
+        pip install --upgrade pip
+        
+        # Install Python dependencies
+        pip install -r requirements.txt
+        
+        # Verify installations
+        python -c "import numpy; print(f'NumPy version: {numpy.__version__}')"
+        python -c "import tensorflow as tf; print(f'TensorFlow version: {tf.__version__}')"
+        python -c "import sklearn; print(f'Scikit-learn version: {sklearn.__version__}')"
+        
+        echo "Python virtual environment setup complete"
     
     - name: Start Redis server
       run: |
@@ -83,6 +103,7 @@ jobs:
     - name: Build RAVN
       run: |
         echo "Building RAVN version ${RAVN_VERSION}"
+        source venv/bin/activate
         make clean-ci
         make all
         
@@ -109,6 +130,7 @@ jobs:
     - name: Check for compilation warnings
       run: |
         echo "Checking for compilation warnings..."
+        source venv/bin/activate
         # Rebuild with verbose output to catch warnings
         make clean-ci
         make all 2>&1 | tee build.log
