--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -102,6 +102,10 @@ jobs:
       run: |
         echo "Building RAVN version ${RAVN_VERSION}"
         source venv/bin/activate
+        
+        # Create codegen directory before build
+        mkdir -p src/daemon/codegen
+        
         make clean-ci
         make all
         
@@ -129,6 +133,10 @@ jobs:
       run: |
         echo "Checking for compilation warnings..."
         source venv/bin/activate
+        
+        # Create codegen directory before build
+        mkdir -p src/daemon/codegen
+        
         # Rebuild with verbose output to catch warnings
         make clean-ci
         make all 2>&1 | tee build.log
