Fix CI: Allow version files to be tracked for daily builds
- Comment out src/version.h and .last_version from .gitignore
- These files need to be tracked for the daily CI version management
- Fixes the 'paths are ignored by .gitignore' error in CI

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ artifacts/
 *.so
 *.a
 
-# Version files (generated)
-src/version.h
-.last_version
+# Version files (generated) - Note: These are tracked for CI version management
+# src/version.h
+# .last_version
 
 # Model files (generated)
 src/daemon/codegen/model_weights.h
